Update Flowbite packages and FontAwesome to v7; fix FA7 icon overflow with --fa-width CSS variable

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -19,6 +19,9 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	/* Fix FontAwesome 7 default fixed-width behavior */
+	--fa-width: auto;
 }
 
 .popupContainer button.closeButton {
@@ -52,4 +55,5 @@
 	width: 100%;
 	text-align: left;
 }
+
 
